--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "<!-- ## Homework",
   "main": "index.js",
   "scripts": {
-    "start": "eleventy --serve"
+    "start": "eleventy --serve",
+    "build": "npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "",
